# dristhi

./: CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  vector.toml
detections/: alerts.py  config.py  consumer.py  engine.py  main.py  producer.py  rule_loader.py
docs/design/: drishti-ai-normalization-design.md
normalizers/: windows_normalizer.py
rules/: after_hours_login.yml  brute_force.yml  new_account_creation.yml
schemas/: alert.avsc  ocsf_auth_event.avsc  raw_windows_event.avsc
scripts/: generate_windows_events.py  register_schemas.py
