[project]
name = "dristhi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs>=26.1.0",
    "authlib>=1.7.2",
    "black>=26.5.1",
    "cachetools>=7.1.4",
    "certifi>=2026.5.20",
    "confluent-kafka>=2.14.2",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
]
